@@ -8,6 +8,7 @@ import org.junit.jupiter.api.Test;
 import org.lfenergy.compas.scl2007b4.model.SCL;
 import org.lfenergy.compas.scl2007b4.model.TDAI;
 import org.lfenergy.compas.scl2007b4.model.TDOI;
+import org.lfenergy.compas.scl2007b4.model.TSDI;
 import org.lfenergy.compas.sct.commons.testhelpers.SclTestMarshaller;
 
 import java.util.List;
@@ -23,7 +24,7 @@ class DaiServiceTest {
     void getDais() {
         //Given
         SCL std = SclTestMarshaller.getSCLFromFile("/std/std_sample.std");
-        TDOI tdoi = std.getIED().get(0).getAccessPoint().get(0).getServer().getLDevice().get(0).getLN0().getDOI().get(3);
+        TDOI tdoi = std.getIED().getFirst().getAccessPoint().getFirst().getServer().getLDevice().getFirst().getLN0().getDOI().get(3);
 
         //When
         List<TDAI> tdais = daiService.getDais(tdoi).toList();
@@ -36,10 +37,26 @@ class DaiServiceTest {
     }
 
     @Test
+    void getDais_in_sdi() {
+        //Given
+        SCL std = SclTestMarshaller.getSCLFromFile("/std/std_sample.std");
+        TSDI tsdi = (TSDI) std.getIED().getFirst().getAccessPoint().getFirst().getServer().getLDevice().getFirst().getLN().getFirst().getDOI().getFirst().getSDIOrDAI().getFirst();
+
+        //When
+        List<TDAI> tdais = daiService.getDais(tsdi).toList();
+
+        //Then
+        assertThat(tdais)
+                .hasSize(2)
+                .extracting(TDAI::getName)
+                .containsExactly("multiplier", "SIUnit");
+    }
+
+    @Test
     void getFilteredDais() {
         //Given
         SCL std = SclTestMarshaller.getSCLFromFile("/std/std_sample.std");
-        TDOI tdoi = std.getIED().get(0).getAccessPoint().get(0).getServer().getLDevice().get(0).getLN0().getDOI().get(3);
+        TDOI tdoi = std.getIED().getFirst().getAccessPoint().getFirst().getServer().getLDevice().getFirst().getLN0().getDOI().get(3);
 
         //When
         List<TDAI> tdais = daiService.getFilteredDais(tdoi, tdai -> tdai.getName().equals("configRev")).toList();
@@ -52,10 +69,26 @@ class DaiServiceTest {
     }
 
     @Test
+    void getFilteredDais_in_sdi() {
+        //Given
+        SCL std = SclTestMarshaller.getSCLFromFile("/std/std_sample.std");
+        TSDI tsdi = (TSDI) std.getIED().getFirst().getAccessPoint().getFirst().getServer().getLDevice().getFirst().getLN().getFirst().getDOI().getFirst().getSDIOrDAI().getFirst();
+
+        //When
+        List<TDAI> tdais = daiService.getFilteredDais(tsdi, tdai -> tdai.getName().equals("multiplier")).toList();
+
+        //Then
+        assertThat(tdais)
+                .hasSize(1)
+                .extracting(TDAI::getName)
+                .containsExactly("multiplier");
+    }
+
+    @Test
     void findDai() {
         //Given
         SCL std = SclTestMarshaller.getSCLFromFile("/std/std_sample.std");
-        TDOI tdoi = std.getIED().get(0).getAccessPoint().get(0).getServer().getLDevice().get(0).getLN0().getDOI().get(3);
+        TDOI tdoi = std.getIED().getFirst().getAccessPoint().getFirst().getServer().getLDevice().getFirst().getLN0().getDOI().get(3);
 
         //When
         Optional<TDAI> dai = daiService.findDai(tdoi, tdai -> tdai.getName().equals("configRev"));
@@ -64,5 +97,20 @@ class DaiServiceTest {
         assertThat(dai.orElseThrow())
                 .extracting(TDAI::getName, tdai -> tdai.getVal().size())
                 .containsExactly("configRev", 1);
+    }
+
+    @Test
+    void findDai_in_sdi() {
+        //Given
+        SCL std = SclTestMarshaller.getSCLFromFile("/std/std_sample.std");
+        TSDI tsdi = (TSDI) std.getIED().getFirst().getAccessPoint().getFirst().getServer().getLDevice().getFirst().getLN().getFirst().getDOI().getFirst().getSDIOrDAI().getFirst();
+
+        //When
+        Optional<TDAI> dai = daiService.findDai(tsdi, tdai -> tdai.getName().equals("multiplier"));
+
+        //Then
+        assertThat(dai.orElseThrow())
+                .extracting(TDAI::getName, tdai -> tdai.getVal().size())
+                .containsExactly("multiplier", 1);
     }
 }
